video 10 remov headed from pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --headed --browser chromium --numprocesses 1 --tracing on
+addopts = --browser chromium --numprocesses 1 --tracing on
